--- a/project.html
+++ b/project.html
@@ -158,7 +158,7 @@
   <div id="me-box">
     <div class="me-container">
         <img id="myImg" src="css/images/old_books.png" alt="Book Store" style="width:100%;max-width:300px">
-        <div class="book_info">
+        <div class="bookInfo">
             <p class="book_desc">This was a personal project created with python, to better help me understand how to create functions. The abilities of this project include buying new and old books and returning the total amount of money you spent. In short, a type if addition and calculator program.</p>
             <div class="link_section">
                 <a href="https://github.com/MichelleRankin/book_store"><button class="sheen">Click Here for the Github files</button></a>
