--- a/project.html
+++ b/project.html
@@ -235,10 +235,10 @@
 <div class="unit">
             <img id="myImg5" src="css/images/Unit_Screen.png" alt="Unit Project" style="width:100%;max-width:300px">
             <div class="unitInfo">
-                <p class="unit_desc">This is a Unit project Dylan and I did, down below is a link to his portfolio, it is a mix between a character creation, and a battle with a leveling system. Mainly created with Python this project was really fun to make. 
+                <p class="unit_desc">This is a Unit project Dylan Shipton and I did created with python, down below is a link to his portfolio, it is a mix between a character creation, and a battle with a leveling system. Mainly created with Python this project was really fun to make. 
                 </p>
                 <div class="link_section">
-                    <a href="https://github.com/MichelleRankin/TheGOAT"><button class="sheen SFlink">Click Here for Dylan's Portfolio</button></a>
+                    <a href="https://dship24.github.io/portfolio.github.io/"><button class="sheen SFlink">Click Here for Dylan's Portfolio</button></a>
                     <a href="https://replit.com/@FlapperFlounder/Unit-2-proj-1?v=1"><button class="sheen2 SFlink">Click Here for the Project</button></a>
                 </div>
             </div>
