--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
     
  </header>
  <div id="me-box">
-    <p class="me-container">I was born on July 3rd, 2002. Growing up I moved around with my family a lot. We have finally settled down in Baldwyn, MS, and then I moved out to go to BaseCamp Coding Academy to follow my dreams. I've wanted to be a computer programmer or software developer since I was 11 years old. Really anything to do with computers. 
+    <p class="me-container">I was born on July 3rd, 2002. Growing up I moved around with my family a lot. We have finally settled down in Baldwyn, MS, and then I moved out to go to BaseCamp Coding Academy to follow my dreams. I've wanted to be a computer programmer or software developer (really anything to do with computers) since I was 11 years old. 
       </p>
       <p class="me-container">
           Before BaseCamp I attended college at Itawamba Community College and learned Visual Basic, Html and CSS, while I also learned the foundation and working parts of any computer in my IT Foundations class. I managed to snag a work study during college to help me get the feel of a work environment. All of this has helped me learn more efficiently and more quickly when I came to BaseCamp. 
