--- a/about.html
+++ b/about.html
@@ -47,8 +47,7 @@
           Before BaseCamp I attended college at Itawamba Community College and learned Visual Basic, Html and CSS, as well as learned the foundation and working parts of any computer in my IT Foundations class. I managed to snag a work study during college to help me get the feel of a work environment. All of this has helped me learn quicker and more efficiently when I came to BaseCamp. 
       </p>
       
-      <p class="me-container"> Seeing as I have started BaseCamp, I am now proficient in Python, HTML and CSS, as well as Visual Basic. I cannot wait to learn more languages as well. </p>
-      <p class="me-container">I am still attending BaseCamp, and will learn Bootstrap, Javascript, Java, and Django. </p>
+      <p class="me-container"> Seeing as I have started BaseCamp, I am now proficient in Python, HTML and CSS, as well as Visual Basic. I cannot wait to learn more languages as well. I am still attending BaseCamp, and will learn Bootstrap, Javascript, Java, and Django. </p>
       <p class="me-container"> I soon hope to obtain an internship from a company that will further help me develop my skills and allow me to improve to better help the company.  </p>
         </div>
         
