--- a/project.html
+++ b/project.html
@@ -176,7 +176,7 @@
     <div class="SFC">
             <img id="myImg2" src="css/images/sunflower_website.png" alt="Sunflower Charity" style="width:100%;max-width:300px">
             <div class="SFInfo">
-                <p class="SF_desc">This project was assigned to the students at BaseCamp, the requirements were to create a fake charity and make a website for them. This was completed using HTML and CSS.</p>
+                <p class="SF_desc">This project was assigned to the students at Base Camp, the requirements were to create a fake charity and make a website for them. This was completed using HTML and CSS.</p>
                 <div class="link_section">
                     <a href="https://github.com/MichelleRankin/Charity"><button class="sheen SFlink">Click Here for the Github files</button></a>
                     <a href="https://michellerankin.github.io/Charity/"><button class="sheen2 SFlink">Click Here for the Website</button></a>
@@ -195,7 +195,7 @@
     <div class="nate">
             <img id="myImg3" src="css/images/nate_goodbye.png" alt="Nate's Website" style="width:100%;max-width:300px">
             <div class="nateInfo">
-                <p class="nate_desc">This project was a personal project created for the leaving of our Senior Technical Director, this website was made as an entertaining joke for him to enjoy whenever he thought about his old job. 
+                <p class="nate_desc">This project was a personal project created for the leaving of our Senior Technical Director, this website was made as an entertaining joke for him to enjoy whenever he thought about his old job. This was made with HTML and CSS. 
                 </p>
                 <div class="link_section">
                     <a href="https://github.com/MichelleRankin/Nate-s-go-away"><button class="sheen SFlink">Click Here for the Github files</button></a>
@@ -215,7 +215,7 @@
     <div class="goat">
             <img id="myImg4" src="css/images/Fred_Astaire.png" alt="G.0.A.T Website" style="width:100%;max-width:300px">
             <div class="goatInfo">
-                <p class="goat_desc">This is the module 1 project for the HTML course at BaseCamp. This was a project where you had to make a GOAT website, which is "Greatest Of All Time." For my project I chose Fred Astaire, and this is how it turned out.
+                <p class="goat_desc">This is the module 1 project for the HTML course at Base Camp. This was a project where you had to make a GOAT website, which is "Greatest Of All Time." For my project I chose Fred Astaire, and this is how it turned out. This website was made with HTML and CSS.
                 </p>
                 <div class="link_section">
                     <a href="https://github.com/MichelleRankin/TheGOAT"><button class="sheen SFlink">Click Here for the Github files</button></a>
@@ -235,7 +235,7 @@
 <div class="unit">
             <img id="myImg5" src="css/images/Unit_Screen.png" alt="Unit Project" style="width:100%;max-width:300px">
             <div class="unitInfo">
-                <p class="unit_desc">This is a Unit project Dylan Shipton and I did created with python, down below is a link to his portfolio, it is a mix between a character creation, and a battle with a leveling system. Mainly created with Python this project was really fun to make. 
+                <p class="unit_desc">This is a Unit project Dylan Shipton and I did created with python, down below is a link to his portfolio, it is a mix between a character creation, and a battle with a leveling system. This was really fun to create. 
                 </p>
                 <div class="link_section">
                     <a href="https://dship24.github.io/portfolio.github.io/"><button class="sheen SFlink">Click Here for Dylan's Portfolio</button></a>
