--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
       </p>
       
       <p class="me-container"> Seeing as I have started Base Camp, I am now proficient in Python, HTML and CSS, as well as Visual Basic. I cannot wait to learn more languages as well. I am still attending Base Camp, and will learn Bootstrap, Javascript, Java, and Django. </p>
-      <p class="me-container"> I soon hope to obtain an internship from a company that will further help me develop my skills and allow me to improve to better help the company.  </p>
+      <p class="me-container"> I soon hope to obtain an internship from a company that will further help me develop my skills and allow me to improve and better help the company.  </p>
         </div>
         
 </body>
