--- a/project.html
+++ b/project.html
@@ -159,7 +159,7 @@
     <div class="me-container">
         <img id="myImg" src="css/images/old_books.png" alt="Book Store" style="width:100%;max-width:300px">
         <div class="bookInfo">
-            <p class="book_desc">This was a personal project created with python, to better help me understand how to create functions. The abilities of this project include buying new and old books and returning the total amount of money you spent. In short, a type if addition and calculator program.</p>
+            <p class="book_desc">This was a personal project created with python, to better help me understand how to create functions. The abilities of this project include buying new and old books and returning the total amount of money you spent. In short, a type of addition and calculator program.</p>
             <div class="link_section">
                 <a href="https://github.com/MichelleRankin/book_store"><button class="sheen">Click Here for the Github files</button></a>
             </div>
@@ -176,7 +176,7 @@
     <div class="SFC">
             <img id="myImg2" src="css/images/sunflower_website.png" alt="Sunflower Charity" style="width:100%;max-width:300px">
             <div class="SFInfo">
-                <p class="SF_desc">This project was assigned to the students at Base Camp, the requirements were to create a fake charity and make a website for them. This was completed using HTML and CSS.</p>
+                <p class="SF_desc">This project was assigned to the students at Base Camp. The requirements were to create a fake charity and make a website for it. This was completed using HTML and CSS.</p>
                 <div class="link_section">
                     <a href="https://github.com/MichelleRankin/Charity"><button class="sheen SFlink">Click Here for the Github files</button></a>
                     <a href="https://michellerankin.github.io/Charity/"><button class="sheen2 SFlink">Click Here for the Website</button></a>
