--- a/project.html
+++ b/project.html
@@ -195,7 +195,7 @@
     <div class="nate">
             <img id="myImg3" src="css/images/nate_goodbye.png" alt="Nate's Website" style="width:100%;max-width:300px">
             <div class="nateInfo">
-                <p class="nate_desc">This project was a personal project created for the leaving of our Senior Technical Director, this website was made as an entertaining joke for him to enjoy whenever he thought about his old job. This was made with HTML and CSS. 
+                <p class="nate_desc">This project was a personal project created for the leaving of our Senior Technical Director. This website was made as an entertaining joke for him to enjoy whenever he thought about his old job. This was made with HTML and CSS. 
                 </p>
                 <div class="link_section">
                     <a href="https://github.com/MichelleRankin/Nate-s-go-away"><button class="sheen SFlink">Click Here for the Github files</button></a>
