--- a/project.html
+++ b/project.html
@@ -235,7 +235,7 @@
 <div class="unit">
             <img id="myImg5" src="css/images/Unit_Screen.png" alt="Unit Project" style="width:100%;max-width:300px">
             <div class="unitInfo">
-                <p class="unit_desc">This is a Unit project Dylan Shipton and I did created with python, down below is a link to his portfolio, it is a mix between a character creation, and a battle with a leveling system. This was really fun to create. 
+                <p class="unit_desc">This is a Unit project Dylan Shipton and I did created with python. Down below is a link to his portfolio, it is a mix between a character creation, and a battle with a leveling system. This was really fun to create. 
                 </p>
                 <div class="link_section">
                     <a href="https://dship24.github.io/portfolio.github.io/"><button class="sheen SFlink">Click Here for Dylan's Portfolio</button></a>
