--- a/project.html
+++ b/project.html
@@ -159,6 +159,7 @@
     <div class="me-container">
         <img id="myImg" src="css/images/old_books.png" alt="Book Store" style="width:100%;max-width:300px">
         <div class="bookInfo">
+		<h1>Python Project</h1>
             <p class="book_desc">This was a personal project created with python, to better help me understand how to create functions. The abilities of this project include buying new and old books and returning the total amount of money you spent. In short, a type of addition and calculator program.</p>
             <div class="link_section">
                 <a href="https://github.com/MichelleRankin/book_store"><button class="sheen">Click Here for the Github files</button></a>
@@ -176,6 +177,7 @@
     <div class="SFC">
             <img id="myImg2" src="css/images/sunflower_website.png" alt="Sunflower Charity" style="width:100%;max-width:300px">
             <div class="SFInfo">
+		    <h1>Charity</h1>
                 <p class="SF_desc">This project was assigned to the students at Base Camp. The requirements were to create a fake charity and make a website for it. This was completed using HTML and CSS.</p>
                 <div class="link_section">
                     <a href="https://github.com/MichelleRankin/Charity"><button class="sheen SFlink">Click Here for the Github files</button></a>
@@ -195,6 +197,7 @@
     <div class="nate">
             <img id="myImg3" src="css/images/nate_goodbye.png" alt="Nate's Website" style="width:100%;max-width:300px">
             <div class="nateInfo">
+		    <h1>Nate's Goodbye</h1>
                 <p class="nate_desc">This project was a personal project created for the leaving of our Senior Technical Director. This website was made as an entertaining joke for him to enjoy whenever he thought about his old job. This was made with HTML and CSS. 
                 </p>
                 <div class="link_section">
@@ -215,6 +218,7 @@
     <div class="goat">
             <img id="myImg4" src="css/images/Fred_Astaire.png" alt="G.0.A.T Website" style="width:100%;max-width:300px">
             <div class="goatInfo">
+		    <h1>The G.O.A.T</h1>
                 <p class="goat_desc">This is the module 1 project for the HTML course at Base Camp. This was a project where you had to make a GOAT website, which is "Greatest Of All Time." For my project I chose Fred Astaire, and this is how it turned out. This website was made with HTML and CSS.
                 </p>
                 <div class="link_section">
@@ -235,6 +239,7 @@
 <div class="unit">
             <img id="myImg5" src="css/images/Unit_Screen.png" alt="Unit Project" style="width:100%;max-width:300px">
             <div class="unitInfo">
+		    <h1>Python Unit 2 Project</h1>
                 <p class="unit_desc">This is a Unit project Dylan Shipton and I did created with python. Down below is a link to his portfolio, it is a mix between a character creation, and a battle with a leveling system. This was really fun to create. 
                 </p>
                 <div class="link_section">
