--- a/project.html
+++ b/project.html
@@ -257,6 +257,26 @@
             </div>  
 
 
+<div class="pokedex">
+            <img id="myImg6" src="css/images/pokedex_screen.png" alt="Pokedex Website" style="width:100%;max-width:300px">
+            <div class="pokemonInfo">
+		    <h1>HTML & CSS Unit 4 Project</h1>
+                <p class="poke_desc">Using HTML & CSS my team and I created a pokédex simulation, where it gives you all pokémon listed with an image of the pokémon and a description of that pokémon. You are also able to edit and create your own pokémon and add it to the database.
+                </p>
+                <div class="link_section">
+		    <a href="https://github.com/MichelleRankin/TheGOAT"><button class="sheen SFlink">Click Here for the Github files</button></a>
+                    <a href="https://dship24.github.io/portfolio.github.io/"><button class="sheen SFlink">Click Here for Dylan's Portfolio</button></a>
+                    <a href="https://ryleechisholm.github.io/personalportfolio/"><button class="sheen2 SFlink">Click Here for Rylee's Portfolio</button></a>
+                </div>
+            </div>
+    </div>
+        
+<!-- The Modal -->
+            <div id="myModel" class="model">
+                <span class="close">&times;</span>
+                <img class="model-content" id="img01">
+            <div id="caption"></div>
+            </div> 
 
 
   
