--- a/project.html
+++ b/project.html
@@ -383,6 +383,26 @@ var span = document.getElementsByClassName("close")[0];
 span.onclick = function() { 
   model.style.display = "none";
 }
+	
+var model = document.getElementById("myModel");
+
+// Get the image and insert it inside the modal - use its "alt" text as a caption
+var img = document.getElementById("myImg6");
+var modelImg = document.getElementById("img01");
+var captionText = document.getElementById("caption");
+img.onclick = function(){
+  model.style.display = "block";
+  modelImg.src = this.src;
+  captionText.innerHTML = this.alt;
+}
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() { 
+  model.style.display = "none";
+}
 </script>
 </body>
 </html>
