--- a/project.html
+++ b/project.html
@@ -261,7 +261,7 @@
             <img id="myImg6" src="css/images/pokedex_screen.png" alt="Pokedex Website" style="width:100%;max-width:300px">
             <div class="pokemonInfo">
 		    <h1>HTML & CSS Unit 4 Project</h1>
-                <p class="poke_desc">Using HTML & CSS my team and I created a pokédex simulation, where it gives you all pokémon listed with an image of the pokémon and a description of that pokémon. You are also able to edit and create your own pokémon and add it to the database.
+                <p class="poke_desc">Using HTML & CSS my team(Rylee and Dylan) and I created a pokédex simulation, where it gives you all pokémon listed with an image of the pokémon and a description of that pokémon. You are also able to edit and create your own pokémon and add it to the database.
                 </p>
                 <div class="link_section">
 		    <a href="https://github.com/MichelleRankin/Portfolio"><button class="sheen SFlink">Click Here for the Github files</button></a>
