--- a/project.html
+++ b/project.html
@@ -279,7 +279,25 @@
             </div> 
 
 
-  
+  <div class="chatroom">
+            <img id="myImg7" src="css/images/chatroom.png" alt="Django Chat Application" style="width:100%;max-width:300px">
+            <div class="chatInfo">
+		    <h1>Django Chat Room</h1>
+                <p class="Chat_info">Using Django, for a unit project I decided to have some fun and created a working Django chatroom. In this chatroom you are able to login, register, choose which room you'd like to chat to, read previous messages, and update your profile.</p>
+                <div class="link_section">
+		    <a href="https://github.com/MichelleRankin/Final-Django-Chat-Room"><button class="sheen SFlink">Click Here for the Github files</button></a>
+                </div>
+            </div>
+    </div>
+        
+<!-- The Modal -->
+            <div id="myModel" class="model">
+                <span class="close">&times;</span>
+                <img class="model-content" id="img01">
+            <div id="caption"></div>
+            </div> 
+	
+	
 </div>
 
 <script>// Get the modal
@@ -403,6 +421,21 @@ var span = document.getElementsByClassName("close")[0];
 span.onclick = function() { 
   model.style.display = "none";
 }
+	var img = document.getElementById("myImg7");
+var modelImg = document.getElementById("img01");
+var captionText = document.getElementById("caption");
+img.onclick = function(){
+  model.style.display = "block";
+  modelImg.src = this.src;
+  captionText.innerHTML = this.alt;
+}
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() { 
+  model.style.display = "none";}
 </script>
 </body>
 </html>
