--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
     
  </header>
  <div id="me-box">
-	 <div class="me-container"><h1>Leading Up To Base Camp</h1>
+	 <div class="me-container"><h1 class="about-title">Leading Up To Base Camp</h1>
     <p>I was born on July 3rd, 2002. Growing up I moved around with my family a lot. We have finally settled down in Baldwyn, MS, and then I moved out to go to BaseCamp Coding Academy to follow my dreams. I've wanted to be a computer programmer or software developer (really anything to do with computers) since I was 11 years old. 
       </p>
       <p class="me-container">
