--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
  <div id="me-box">
 	 <div class="me-container"><h1 class="about-title">Leading Up To Base Camp</h1>
     <p>I was born on July 3rd, 2002. Growing up I moved around with my family a lot. We have finally settled down in Baldwyn, MS, and then I moved out to go to BaseCamp Coding Academy to follow my dreams. I've wanted to be a computer programmer or software developer (really anything to do with computers) since I was 11 years old. 
-      </p>
+		 </p></div>
       <p class="me-container">
           Before Base Camp I attended college at Itawamba Community College and took a few training courses in Visual Basic, Html and CSS, as well as learned the foundation and working parts of any computer in my IT Foundations course. I managed to snag a work study during college to help me get the feel of a work environment. I didn't want to sit on my hands, I wanted to go ahead and experience what I am going to be doing for the rest of my life. All of this has helped me learn quicker and more efficiently when I came to Base Camp. 
       </p>
