--- a/project.html
+++ b/project.html
@@ -317,6 +317,24 @@
             <div id="caption"></div>
             </div> 
 	
+	 <div class="minecraft">
+            <img id="myImg8" src="css/images/minecraft.png" alt="Mini-Minecraft" style="width:100%;max-width:300px">
+            <div class="mineInfo">
+		    <h1>Counter</h1>
+                <p class="Mine_info">After gaining necessary skills in JavaScript, I decided to try my luck at recreating the beta version of Minecraft. I used a few frameworks and a lot of googling.</p>
+                <div class="link_section">
+		    <a href="https://github.com/MichelleRankin/Unit-JavaScript-MiniMinecraft"><button class="sheen SFlink">Click Here for the files</button></a>
+                </div>
+            </div>
+    </div>
+        
+<!-- The Modal -->
+            <div id="myModel" class="model">
+                <span class="close">&times;</span>
+                <img class="model-content" id="img01">
+            <div id="caption"></div>
+            </div> 
+	
 </div>
 
 <script>// Get the modal
@@ -458,6 +476,22 @@ span.onclick = function() {
 	
 	
 var img = document.getElementById("myImg8");
+var modelImg = document.getElementById("img01");
+var captionText = document.getElementById("caption");
+img.onclick = function(){
+  model.style.display = "block";
+  modelImg.src = this.src;
+  captionText.innerHTML = this.alt;
+}
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() { 
+  model.style.display = "none";}
+	
+var img = document.getElementById("myImg9");
 var modelImg = document.getElementById("img01");
 var captionText = document.getElementById("caption");
 img.onclick = function(){
