--- a/project.html
+++ b/project.html
@@ -320,7 +320,7 @@
 	 <div class="minecraft">
             <img id="myImg9" src="css/images/minecraft.png" alt="Mini-Minecraft" style="width:100%;max-width:300px">
             <div class="mineInfo">
-		    <h1>Counter</h1>
+		    <h1>Mini-Minecraft</h1>
                 <p class="Mine_info">After gaining necessary skills in JavaScript, I decided to try my luck at recreating the beta version of Minecraft. I used a few frameworks and a lot of googling.</p>
                 <div class="link_section">
 		    <a href="https://github.com/MichelleRankin/Unit-JavaScript-MiniMinecraft"><button class="sheen SFlink">Click Here for the files</button></a>
