--- a/project.html
+++ b/project.html
@@ -157,7 +157,7 @@
   </header>
   <div id="me-box">
     <div class="me-container">
-        <img id="myImg" src="css/images/old_books.png" alt="Book Store" style="width:100%;max-width:40%">
+        <img id="myImg" src="css/images/old_books.png" alt="Book Store" style="width:100%;max-width:40%;height:25%">
         <div class="bookInfo">
 		<h1>Python Project</h1>
             <p class="book_desc">This was a personal project created with python, to better help me understand how to create functions. The abilities of this project include buying new and old books and returning the total amount of money you spent. In short, a type of addition and calculator program.</p>
@@ -175,7 +175,7 @@
         </div>         
     </div>
     <div class="SFC">
-            <img id="myImg2" src="css/images/sunflower_website.png" alt="Sunflower Charity" style="width:100%;max-width:50%">
+            <img id="myImg2" src="css/images/sunflower_website.png" alt="Sunflower Charity" style="width:100%;max-width:50%;height:25%">
             <div class="SFInfo">
 		    <h1>Charity</h1>
                 <p class="SF_desc">This project was assigned to the students at Base Camp. The requirements were to create a fake charity and make a website for it. This was completed using HTML and CSS.</p>
@@ -195,7 +195,7 @@
 
     
     <div class="nate">
-            <img id="myImg3" src="css/images/nate_goodbye.png" alt="Nate's Website" style="width:100%;max-width:50%">
+            <img id="myImg3" src="css/images/nate_goodbye.png" alt="Nate's Website" style="width:100%;max-width:50%;height:25%">
             <div class="nateInfo">
 		    <h1>Nate's Goodbye</h1>
                 <p class="nate_desc">This project was a personal project created for the leaving of our Senior Technical Director. This website was made as an entertaining joke for him to enjoy whenever he thought about his old job. This was made with HTML and CSS. 
@@ -216,7 +216,7 @@
 
     
     <div class="goat">
-            <img id="myImg4" src="css/images/Fred_Astaire.png" alt="G.0.A.T Website" style="width:100%;max-width:50%">
+            <img id="myImg4" src="css/images/Fred_Astaire.png" alt="G.0.A.T Website" style="width:100%;max-width:50%;height:25%">
             <div class="goatInfo">
 		    <h1>The G.O.A.T</h1>
                 <p class="goat_desc">This is the module 1 project for the HTML course at Base Camp. This was a project where you had to make a GOAT website, which is "Greatest Of All Time." For my project I chose Fred Astaire, and this is how it turned out. This website was made with HTML and CSS.
@@ -237,7 +237,7 @@
 
 
 <div class="unit">
-            <img id="myImg5" src="css/images/Unit_Screen.png" alt="Unit Project" style="width:100%;max-width:40%">
+            <img id="myImg5" src="css/images/Unit_Screen.png" alt="Unit Project" style="width:100%;max-width:40%;height:25%">
             <div class="unitInfo">
 		    <h1>Python Unit 2 Project</h1>
                 <p class="unit_desc">This is a Unit project Dylan Shipton and I did created with python. Down below is a link to his portfolio, it is a mix between a character creation, and a battle with a leveling system. This was really fun to create. 
@@ -258,7 +258,7 @@
 
 
 <div class="pokedex">
-            <img id="myImg6" src="css/images/pokedex_screen.png" alt="Pokedex Website" style="width:100%;max-width:45%">
+            <img id="myImg6" src="css/images/pokedex_screen.png" alt="Pokedex Website" style="width:100%;max-width:45%;height:25%">
             <div class="pokemonInfo">
 		    <h1>Mock-Pokedex(HTML & CSS)</h1>
                 <p class="poke_desc">Using HTML & CSS my team(Rylee and Dylan) and I created a pokédex simulation, where it gives you all pokémon listed with an image of the pokémon and a description of that pokémon. You are also able to edit and create your own pokémon and add it to the database.
@@ -280,7 +280,7 @@
 
 
   <div class="chatroom">
-            <img id="myImg7" src="css/images/chatroom.png" alt="Django Chat Application" style="width:100%;max-width:50%">
+            <img id="myImg7" src="css/images/chatroom.png" alt="Django Chat Application" style="width:100%;max-width:50%;height:25%">
             <div class="chatInfo">
 		    <h1>Django Chat Room</h1>
                 <p class="Chat_info">Using Django, for a unit project I decided to have some fun and created a working Django chatroom. In this chatroom you are able to login, register, choose which room you'd like to chat to, read previous messages, and update your profile.</p>
@@ -300,7 +300,7 @@
 	
 	
 	 <div class="counter">
-            <img id="myImg8" src="css/images/counter.png" alt="Javascript Counter" style="width:100%;max-width:50%">
+            <img id="myImg8" src="css/images/counter.png" alt="Javascript Counter" style="width:100%;max-width:50%;height:25%">
             <div class="countInfo">
 		    <h1>Counter</h1>
                 <p class="Count_info">While Learning JavaScript I decided to try my luck with a counter, here is the CSS covered Javascript Counter, It can go up and down, but never below zero.</p>
@@ -318,7 +318,7 @@
             </div> 
 	
 	 <div class="minecraft">
-            <img id="myImg9" src="css/images/minecraft.png" alt="Mini-Minecraft" style="width:100%;max-width:50%">
+            <img id="myImg9" src="css/images/minecraft.png" alt="Mini-Minecraft" style="width:100%;max-width:50%;height:25%">
             <div class="mineInfo">
 		    <h1>Mini-Minecraft</h1>
                 <p class="Mine_info">After gaining necessary skills in JavaScript, I decided to try my luck at recreating the beta version of Minecraft. I used a few frameworks and a lot of googling.</p>
