--- a/project.html
+++ b/project.html
@@ -10,6 +10,8 @@
 			cursor: pointer;
 			transition: 0.3s;
 			padding: .25em;
+			max-width: 50%;
+			max-height: 25%;
 		}
 
 		#myImg2 {
@@ -17,6 +19,64 @@
 			cursor: pointer;
 			transition: 0.3s;
 			padding: .25em;
+			max-width: 50%;
+			max-height: 25%;
+		}
+		#myImg3 {
+			border-radius: 5px;
+			cursor: pointer;
+			transition: 0.3s;
+			padding: .25em;
+			max-width: 50%;
+			max-height: 25%;
+		}
+		#myImg4 {
+			border-radius: 5px;
+			cursor: pointer;
+			transition: 0.3s;
+			padding: .25em;
+			max-width: 50%;
+			max-height: 25%;
+		}
+		#myImg5 {
+			border-radius: 5px;
+			cursor: pointer;
+			transition: 0.3s;
+			padding: .25em;
+			max-width: 50%;
+			max-height: 25%;
+		}
+		#myImg6 {
+			border-radius: 5px;
+			cursor: pointer;
+			transition: 0.3s;
+			padding: .25em;
+			max-width: 50%;
+			max-height: 25%;
+		}
+		#myImg7 {
+			border-radius: 5px;
+			cursor: pointer;
+			transition: 0.3s;
+			padding: .25em;
+			max-width: 50%;
+			max-height: 25%;
+		}
+		#myImg8 {
+			border-radius: 5px;
+			cursor: pointer;
+			transition: 0.3s;
+			padding: .25em;
+			max-width: 50%;
+			max-height: 25%;
+		}
+		#myImg9 {
+			border-radius: 5px;
+			cursor: pointer;
+			transition: 0.3s;
+			padding: .25em;
+			max-width: 50%;
+			max-height: 25%;
 		}
 
 		#myImg:hover {
@@ -24,6 +84,27 @@
 		}
 
 		#myImg2:hover {
+			opacity: 0.7;
+		}
+		#myImg3:hover {
+			opacity: 0.7;
+		}
+		#myImg4:hover {
+			opacity: 0.7;
+		}
+		#myImg5:hover {
+			opacity: 0.7;
+		}
+		#myImg6:hover {
+			opacity: 0.7;
+		}
+		#myImg7:hover {
+			opacity: 0.7;
+		}
+		#myImg8:hover {
+			opacity: 0.7;
+		}
+		#myImg9:hover {
 			opacity: 0.7;
 		}
 
