--- a/project.html
+++ b/project.html
@@ -240,7 +240,7 @@
     <div class="me-container">
         <img id="myImg" src="css/images/old_books.png" alt="Book Store">
         <div class="bookInfo">
-		<h1>Python Project</h1>
+		<h1>Book Store(Python)</h1>
             <p class="book_desc">This was a personal project created with python, to better help me understand how to create functions. The abilities of this project include buying new and old books and returning the total amount of money you spent. In short, a type of addition and calculator program.</p>
             <div class="link_section">
                 <a href="https://github.com/MichelleRankin/book_store"><button class="sheen">Click Here for the Github files</button></a>
@@ -258,8 +258,8 @@
     <div class="SFC">
             <img id="myImg2" src="css/images/sunflower_website.png" alt="Sunflower Charity">
             <div class="SFInfo">
-		    <h1>Charity</h1>
-                <p class="SF_desc">This project was assigned to the students at Base Camp. The requirements were to create a fake charity and make a website for it. This was completed using HTML and CSS.</p>
+		    <h1>Charity(HTML & CSS)</h1>
+                <p class="SF_desc">The goal of creating this website was to help provide a better understanding to myself about divs and about css class names in HTML & CSS.</p>
                 <div class="link_section">
                     <a href="https://github.com/MichelleRankin/Charity"><button class="sheen SFlink">Click Here for the Github files</button></a>
                     <a href="https://michellerankin.github.io/Charity/"><button class="sheen2 SFlink">Click Here for the Website</button></a>
@@ -278,8 +278,8 @@
     <div class="nate">
             <img id="myImg3" src="css/images/nate_goodbye.png" alt="Nate's Website">
             <div class="nateInfo">
-		    <h1>Nate's Goodbye</h1>
-                <p class="nate_desc">This project was a personal project created for the leaving of our Senior Technical Director. This website was made as an entertaining joke for him to enjoy whenever he thought about his old job. This was made with HTML and CSS. 
+		    <h1>Nate's Goodbye(HTML & CSS)</h1>
+                <p class="nate_desc">With no learning ideal for this project, it was made as a tribute to our old technical director as he took a new job with Triplebyte. Meant to bring a smile to his face whenever he sees it. 
                 </p>
                 <div class="link_section">
                     <a href="https://github.com/MichelleRankin/Nate-s-go-away"><button class="sheen SFlink">Click Here for the Github files</button></a>
@@ -299,8 +299,8 @@
     <div class="goat">
             <img id="myImg4" src="css/images/Fred_Astaire.png" alt="G.0.A.T Website">
             <div class="goatInfo">
-		    <h1>The G.O.A.T</h1>
-                <p class="goat_desc">This is the module 1 project for the HTML course at Base Camp. This was a project where you had to make a GOAT website, which is "Greatest Of All Time." For my project I chose Fred Astaire, and this is how it turned out. This website was made with HTML and CSS.
+		    <h1>The G.O.A.T(HTML & CSS)</h1>
+                <p class="goat_desc">The goal of this project was to get our feet wet in learning HTML and CSS. For my G.O.A.T or "Greatest of All Time" Project, I chose Fred Astaire and this is how it turned out. 
                 </p>
                 <div class="link_section">
                     <a href="https://github.com/MichelleRankin/TheGOAT"><button class="sheen SFlink">Click Here for the Github files</button></a>
