--- a/project.html
+++ b/project.html
@@ -320,8 +320,8 @@
 <div class="unit">
             <img id="myImg5" src="css/images/Unit_Screen.png" alt="Unit Project">
             <div class="unitInfo">
-		    <h1>Python Unit 2 Project</h1>
-                <p class="unit_desc">This is a Unit project Dylan Shipton and I did created with python. Down below is a link to his portfolio, it is a mix between a character creation, and a battle with a leveling system. This was really fun to create. 
+		    <h1>Ultimum Bellator(Python)</h1>
+                <p class="unit_desc">The goal of this project was to test our knowledge and understanding of the curiculum of Python that was provided for us. For this project I was paired with Dylan Shipton. Down below is a link to his portfolio. The project is a mix between a character creation, a battle arena, and a leveling system. This was really fun to create. It really tested my knowledge and my skills and provided a challenge for me. 
                 </p>
                 <div class="link_section">
                     <a href="https://dship24.github.io/portfolio.github.io/"><button class="sheen SFlink">Click Here for Dylan's Portfolio</button></a>
@@ -342,7 +342,7 @@
             <img id="myImg6" src="css/images/pokedex_screen.png" alt="Pokedex Website">
             <div class="pokemonInfo">
 		    <h1>Mock-Pokedex(HTML & CSS)</h1>
-                <p class="poke_desc">Using HTML & CSS my team(Rylee and Dylan) and I created a pokédex simulation, where it gives you all pokémon listed with an image of the pokémon and a description of that pokémon. You are also able to edit and create your own pokémon and add it to the database.
+                <p class="poke_desc">The goal of this project was to help us better understand using models and forms with standard HTML & CSS. My team(Rylee and Dylan) and I created a pokédex simulation, where it gives you all pokémon listed with an image of the pokémon and a description of that pokémon. You are also able to edit and create your own pokémon and add it to the database.
                 </p>
                 <div class="link_section">
 		    <a href="https://github.com/ryleechisholm/Unit-4-Group"><button class="sheen SFlink">Click Here for the Github files</button></a>
@@ -364,7 +364,7 @@
             <img id="myImg7" src="css/images/chatroom.png" alt="Django Chat Application">
             <div class="chatInfo">
 		    <h1>Django Chat Room</h1>
-                <p class="Chat_info">Using Django, for a unit project I decided to have some fun and created a working Django chatroom. In this chatroom you are able to login, register, choose which room you'd like to chat to, read previous messages, and update your profile.</p>
+                <p class="Chat_info">In order to test my skills using the freshly learned Django framework, I decided to use Models and forms to retrieve data and save it to the models to then be returned for the user to see. In this chatroom you are able to login, register, choose which room you'd like to chat to, read previous messages, and update your profile.</p>
                 <div class="link_section">
 		    <a href="https://github.com/MichelleRankin/Final-Django-Chat-Room"><button class="sheen SFlink">Click Here for the Github files</button></a>
                 </div>
@@ -383,7 +383,7 @@
 	 <div class="counter">
             <img id="myImg8" src="css/images/counter.png" alt="Javascript Counter">
             <div class="countInfo">
-		    <h1>Counter</h1>
+		    <h1>Counter(JavaScript)</h1>
                 <p class="Count_info">While Learning JavaScript I decided to try my luck with a counter, here is the CSS covered Javascript Counter, It can go up and down, but never below zero.</p>
                 <div class="link_section">
 		    <a href="https://michellerankin.github.io/jsCounter/"><button class="sheen SFlink">Click Here for the Counter</button></a>
@@ -401,8 +401,8 @@
 	 <div class="minecraft">
             <img id="myImg9" src="css/images/minecraft.png" alt="Mini-Minecraft">
             <div class="mineInfo">
-		    <h1>Mini-Minecraft</h1>
-                <p class="Mine_info">After gaining necessary skills in JavaScript, I decided to try my luck at recreating the beta version of Minecraft. I used a few frameworks and a lot of googling.</p>
+		    <h1>Mini-Minecraft(JavaScript)</h1>
+                <p class="Mine_info">After gaining necessary skills in JavaScript, I decided to try my luck at recreating the beta version of Minecraft. In order to do this I had to figure out how to create the visul and 3D aspect of the standard Minecraft game. I used a few frameworks and a lot of googling. Coming out of the project I understood more than when I first went into the project. </p>
                 <div class="link_section">
 		    <a href="https://github.com/MichelleRankin/Unit-JavaScript-MiniMinecraft"><button class="sheen SFlink">Click Here for the files</button></a>
                 </div>
