--- a/about.html
+++ b/about.html
@@ -42,8 +42,8 @@
  </header>
  <div id="me-box">
 	 <div class="me-container">
-<!-- 		 <h1 class="about-title">Leading Up To Base Camp</h1> -->
-    			<p>I was born on July 3rd, 2002. Growing up I moved around with my family a lot. We have finally settled down in Baldwyn, MS, and then I moved out to go to BaseCamp Coding Academy to follow my dreams. I've wanted to be a computer programmer or software developer (really anything to do with computers) since I was 11 years old. 
+		 <h1>Leading Up To Base Camp</h1>
+    			<p>Moving around as a child thankfully did not crush my determination to become a software developer, which has been my hope since I was 11. Really anything to do with computers has been what I've wanted to do. 
 		 </p></div>
 	 <div class="me-container">
       <p>
