--- a/about.html
+++ b/about.html
@@ -42,17 +42,28 @@
  </header>
  <div id="me-box">
 	 <div class="me-container">
-		 <h1>Leading Up To Base Camp</h1>
-    			<p>Moving around as a child thankfully did not crush my determination to become a software developer, which has been my hope since I was 11. Really anything to do with computers has been what I've wanted to do. 
+		 <h1>Before Base Camp</h1>
+    			<p>		Moving around as a child thankfully did not crush my determination to become a software developer, which has been my hope since I was 11. Really anything to do with computers has been what I've wanted to do. 
 		 </p></div>
 	 <div class="me-container">
+		 <h1>Previous Skills</h1>
       <p>
-          Before Base Camp I attended college at Itawamba Community College and took a few training courses in Visual Basic, Html and CSS, as well as learned the foundation and working parts of any computer in my IT Foundations course. I managed to snag a work study during college to help me get the feel of a work environment. I didn't want to sit on my hands, I wanted to go ahead and experience what I am going to be doing for the rest of my life. All of this has helped me learn quicker and more efficiently when I came to Base Camp. 
+         After graduating high school a semester early, I attended college at Itawamba Community College and took a few training courses in Visual Basic, HTML and CSS, as well as learned the foundation and working parts of any computer in my IT Foundations course. During this time I worked for the college a couple days a week in hopes of gaining some workplace experience to help me better prepare for the workforce. The path leading to Base Camp helped prepare me for the tough 11 month course to help me become a Full-Stack Developer. 
 		 </p></div>
 	 <div class="me-container">
-      		<p> Seeing as I have started Base Camp, I am now proficient in Python, HTML and CSS, Django, as well as Visual Basic. I cannot wait to learn more languages as well. I am still attending Base Camp, and will learn Bootstrap, Javascript, and Java. </p>
+		 <h1>At Base Camp</h1>
+      		<p> With the help of Studying, I am now proficient in:
+			Python,
+			HTML & CSS, 
+			Django, 
+			Visual Basic,
+			JavaScript,
+			Java,
+			SQL
+		 Though not many, these languages have helped me to pick up my pace in learning and understanding different coding languages. </p>
 	 </div>
 	 <div class="me-container">
+		 <h1>Final Hope</h1>
       <p> I soon hope to obtain an internship from a company that will further help me develop my skills and allow me to improve and better help the company.  </p>
 	 </div></div>
         
