--- a/project.html
+++ b/project.html
@@ -402,7 +402,7 @@
             <img id="myImg9" src="css/images/minecraft.png" alt="Mini-Minecraft">
             <div class="mineInfo">
 		    <h1>Mini-Minecraft (Java Script)</h1>
-                <p class="Mine_info">After gaining necessary skills in JavaScript, I decided to try my luck at recreating the beta version of Minecraft. In order to do this I had to figure out how to create the visul and 3D aspect of the standard Minecraft game. I used a few frameworks and a lot of googling. Coming out of the project I understood more than when I first went into the project. </p>
+                <p class="Mine_info">After gaining necessary skills in JavaScript, I decided to try my luck at recreating the beta version of Minecraft. In order to do this I had to figure out how to create the visual and 3D aspect of the standard Minecraft game. I used a few frameworks and a lot of googling. Coming out of the project I understood more than when I first went into the project. </p>
                 <div class="link_section">
 		    <a href="https://github.com/MichelleRankin/Unit-JavaScript-MiniMinecraft"><button class="sheen SFlink">Click Here for the files</button></a>
                 </div>
