--- a/project.html
+++ b/project.html
@@ -78,6 +78,22 @@
 			max-width: 50%;
 			max-height: 25%;
 		}
+		#myImg10 {
+			border-radius: 5px;
+			cursor: pointer;
+			transition: 0.3s;
+			padding: .25em;
+			max-width: 50%;
+			max-height: 25%;
+		}
+		#myImg11 {
+			border-radius: 5px;
+			cursor: pointer;
+			transition: 0.3s;
+			padding: .25em;
+			max-width: 50%;
+			max-height: 25%;
+		}
 
 		#myImg:hover {
 			opacity: 0.7;
@@ -105,6 +121,12 @@
 			opacity: 0.7;
 		}
 		#myImg9:hover {
+			opacity: 0.7;
+		}
+		#myImg10:hover {
+			opacity: 0.7;
+		}
+		#myImg11:hover {
 			opacity: 0.7;
 		}
 
