--- a/project.html
+++ b/project.html
@@ -259,7 +259,7 @@
         </div>
   </header>
   <div id="me-box">
-    <div class="me-container">
+    <div class="PythonBook">
         <img id="myImg" src="css/images/old_books.png" alt="Book Store">
         <div class="bookInfo">
 		<h1>Book Store (Python)</h1>
