--- a/project.html
+++ b/project.html
@@ -255,6 +255,7 @@
   <header class="showcase3">
     <div class="container showcase-inner">
             <h1 class="pg2">My Projects</h1>
+	    <h2> (In Chronological Order[Oldest to Newest])</h2>
 
         </div>
   </header>
