--- a/about.html
+++ b/about.html
@@ -65,7 +65,12 @@
 	 <div class="me-container">
 		 <h1>Final Hope</h1>
       <p>:               I soon hope to obtain an internship from a company that will further help me develop my skills and allow me to improve and better help the company.  </p>
-	 </div></div>
+	 </div>
+	<div class="me-container">
+		 <h1>Results</h1>
+      <p>:               After working hard and going through many interviews, I have landed a 3 month Internship at C Spire in Ridgeland MS where I am learning the language Flutter and using Android Studios to help develop the new SOLO app made by C Spire. I am in the BSI team which is Brand Services Integration. I hope to learn a lot and be able to use my newly learned skills to provide better quality work and products.   </p>
+	 </div>
+	</div>
         
 </body>
 </html>
