--- a/project.html
+++ b/project.html
@@ -459,7 +459,24 @@
                 <img class="model-content" id="img01">
             <div id="caption"></div>
             </div> 
-	
+	<div class="jazzyProj">
+            <img id="myImg12" src="css/images/jazzy.png" alt="Jazzy's Family Creations">
+	   
+            <div class="JazzyInfo">
+		    <h1>Jazzy's Family Creations(Django, Heroku, VS Code, Python, HTML & CSS)</h1>
+                <p class="Jazzy_info"> A client asked for a website where you could request an event and see booked dates, when requesting the event you're able to login and pay a deposit to book a date for your event. </p>
+                <div class="link_section">
+		    <a href="https://jazzysfamilycreations.herokuapp.com/"><button class="sheen SFlink">Click Here for the Website</button></a>
+                </div>
+            </div>
+    </div>
+        
+<!-- The Modal -->
+            <div id="myModel" class="model">
+                <span class="close">&times;</span>
+                <img class="model-content" id="img01">
+            <div id="caption"></div>
+            </div> 
 </div>
 
 <script>// Get the modal
@@ -649,6 +666,22 @@ span.onclick = function() {
   model.style.display = "none";}
 	
 var img = document.getElementById("myImg11");
+var modelImg = document.getElementById("img01");
+var captionText = document.getElementById("caption");
+img.onclick = function(){
+  model.style.display = "block";
+  modelImg.src = this.src;
+  captionText.innerHTML = this.alt;
+}
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() { 
+  model.style.display = "none";}
+	
+var img = document.getElementById("myImg12");
 var modelImg = document.getElementById("img01");
 var captionText = document.getElementById("caption");
 img.onclick = function(){
